# sMemPool

./: .gitignore  CMakeLists.txt  gcov.sh  list_allocator.cxx.gcov  utils.hxx.gcov
include/: smempool.h
include/internal/: allocator.hxx  list_allocator.hxx  pool.hxx  pool_allocator.hxx  proxy_allocator.hxx  slab_allocator.hxx  utils.hxx
source/: allocator.cxx  api.cxx  list_allocator.cxx  pool.cxx  pool_allocator.cxx  proxy_allocator.cxx  slab_allocator.cxx
test/: api_test.cxx  list_test.cxx  malloc_test.cxx  pool_test.cxx  slab_test.cxx
